--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <html>
     <title>Antispam</title>
-    <form>
-        <p>Введите сообщение для проверки:</p>
-        <textarea></textarea>
-        <br><br>
-        <button>Submit</button>
-    </form>
+    <p>Введите сообщение для проверки:</p>
+    <textarea id="text"></textarea>
+    <br><br>
+    <button onclick="check()">Submit</button>
+    <br><br>
+    <p id="result"></p>
+    <script>
+        function postData(url, data, func, ...args){
+			var xhr = new XMLHttpRequest();
+			xhr.open("POST", url);
+
+			xhr.setRequestHeader('Accept', "text/plain");
+			xhr.setRequestHeader('Content-Type', "application/x-www-form-urlencoded");
+			xhr.timeout = 5000;
+
+			xhr.onreadystatechange = function () {
+				if (xhr.readyState === 4) {;
+					if(typeof func !== "undefined"){
+						func(xhr.responseText, ...args);
+					}
+
+					return xhr.responseText;
+				}
+			};
+
+			xhr.send(data);
+		}
+
+        function showResult(result){
+            docuemnt.getElementById("result").innerText = result;
+        }
+
+        function check(){
+            text = document.getElementById("text").value;
+            postData("main", "text=" + text, showResult);
+        }
+    </script>
 </html>
