--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		}
 
         function showResult(result){
-            docuemnt.getElementById("result").innerText = result;
+            document.getElementById("result").innerText = result;
         }
 
         function check(){
