--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
 
         function check(){
-            text = document.getElementById("text").value;
+            text = btoa(document.getElementById("text").value);
             postData("main", "text=" + text, showResult);
         }
     </script>
